# skylanders-gamepad-daemon

./: Makefile  README.md  pyproject.toml
src/: gamepad.c  gamepad.h  main.c  main.h  main.py
systemd/: skylanders-gamepad-daemon.service  skylandersd.service
