[project]
name = "skylandersd"
version = "0.1.0"
description = "Userspace daemon providing support for the Skylanders Trap Team mobile gamepad on Linux through uinput"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.0.1",
    "evdev>=1.9.2",
    "python-uinput>=1.0.1",
]
